--- a/RobotBlog/ClientApp/package.json
+++ b/RobotBlog/ClientApp/package.json
@@ -7,16 +7,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
-    "i18next": "^19.6.3",
+    "bootstrap": "^4.5.2",
+    "i18next": "^19.7.0",
     "markdown-it": "^11.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-flag-icon-css": "^1.0.25",
-    "react-i18next": "^11.7.0",
+    "react-i18next": "^11.7.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "reactn": "^2.2.7",
     "reactn-persist": "^1.2.4"
   },
@@ -40,5 +40,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0"
   }
 }
