--- a/RobotBlog/ClientApp/package.json
+++ b/RobotBlog/ClientApp/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.2",
     "i18next": "^19.7.0",
     "markdown-it": "^11.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -17,6 +18,7 @@
     "react-i18next": "^11.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-uuid": "^1.0.2",
     "reactn": "^2.2.7",
     "reactn-persist": "^1.2.4"
   },
@@ -42,7 +44,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.7.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
