Send activation email after registration

--- a/RobotBlog/appsettings.json
+++ b/RobotBlog/appsettings.json
@@ -6,6 +6,21 @@
 
   "MySqlConnection": "server=localhost;database=robotblog;user=robot;password=supersecret;",
 
+  "Mail": {
+    "Host": "localhost",
+    "Port": 25,
+    "UseSSL": false,
+    "UseAuthentication": false,
+    "Username": "",
+    "Password": "",
+    "SenderMail": "noreply@robotjatek.hu",
+    "ActivationURL": "https://localhost:44320/activate"
+  },
+
+  "User": {
+    "EmailActivationRequired":  true
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
