--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,9 @@ services:
         volumes: 
             - ./db/data:/var/lib/mysql
         command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    mailhog:
+        image: mailhog/mailhog
+        restart: always
+        ports:
+            - "25:1025"
+            - "8025:8025"
