--- a/RobotBlog/RobotBlog.csproj
+++ b/RobotBlog/RobotBlog.csproj
@@ -35,7 +35,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Templates\Activation\template.cshtml" />
+    <None Include="Templates\Activation\template.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
