--- a/RobotBlog/appsettings.json
+++ b/RobotBlog/appsettings.json
@@ -14,7 +14,8 @@
     "Username": "",
     "Password": "",
     "SenderMail": "noreply@robotjatek.hu",
-    "ActivationURL": "https://localhost:44320/activate"
+    "ActivationURL": "https://localhost:44320/activate",
+    "PasswordResetURL":  "https://localhost:44320/password-reset"
   },
 
   "User": {
